Fix menu borders on small devices

--- a/src/app/components/dashboard-company-selectbox/dashboard-company-selectbox.less
+++ b/src/app/components/dashboard-company-selectbox/dashboard-company-selectbox.less
@@ -14,6 +14,10 @@ dashboard-company-selectbox {
     border-bottom: 1px solid @dashboard-cpy-select-border-color;
     z-index: 999;
 
+    @media (max-width: @screen-sm) {
+      border-radius: 0;
+    }
+
     // Change company button
     .btn.switch-company {
       color: @dashboard-cpy-select-header-text-color;
